--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     new Vue({
       el: '#root',
       data: {
-        message: 'Hello World!'
+        message: 'Hello World'
       }
     })
   </script>
