--- a/index.html
+++ b/index.html
@@ -3,18 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>Laracasts - Vue</title>
+    <style media="screen">
+      .color-red {
+        color: red;
+      }
+      .color-blue {
+        color: blue;
+      }
+      .is-loading {
+        background: green;
+      }
+    </style>
   </head>
   <body>
     <div id="root">
-      <ul>
-        <!-- <li v-for="name in names">{{ name }}</li> -->
-        <li v-for="name in names" v-text="name"></li>
+      <button :title="title">Hover over me</button>
 
-        <input id="input" type="text" v-model="newName" autofocus>
-        <button @click="addName">Add Name</button>
-      </ul>
+      <h1 v-bind:class="className">Hello World</h1>
+      <button :class="{ 'is-loading': isLoading }" @click="toggleClass">Click Me</button>
+      <br>
+      <br>
+      <button :disabled="isDisabled" @click="toggleDisabled">Disabled</button>
     </div>
     <script src="https://unpkg.com/vue"></script>
   </body>
-  <script src="app.js"></script>
+  <script>
+    const app = new Vue({
+      el: '#root',
+      data: {
+        className: 'color-red',
+        isDisabled: false,
+        isLoading: false,
+        title: 'Now the title is being set through JavaScript'
+      },
+      mounted() {
+
+      },
+      methods: {
+        toggleClass() {
+          this.isLoading === false ? this.isLoading = true : this.isLoading = false;
+        },
+        toggleDisabled() {
+          this.isDisabled === false ? this.isDisabled = true : this.isDisabled = false;
+        }
+      }
+    });
+  </script>
 </html>
