--- a/index.html
+++ b/index.html
@@ -17,13 +17,7 @@
   </head>
   <body>
     <div id="root">
-      <button :title="title">Hover over me</button>
 
-      <h1 v-bind:class="className">Hello World</h1>
-      <button :class="{ 'is-loading': isLoading }" @click="toggleClass">Click Me</button>
-      <br>
-      <br>
-      <button :disabled="isDisabled" @click="toggleDisabled">Disabled</button>
     </div>
     <script src="https://unpkg.com/vue"></script>
   </body>
@@ -31,21 +25,13 @@
     const app = new Vue({
       el: '#root',
       data: {
-        className: 'color-red',
-        isDisabled: false,
-        isLoading: false,
-        title: 'Now the title is being set through JavaScript'
+        message:
       },
       mounted() {
 
       },
       methods: {
-        toggleClass() {
-          this.isLoading === false ? this.isLoading = true : this.isLoading = false;
-        },
-        toggleDisabled() {
-          this.isDisabled === false ? this.isDisabled = true : this.isDisabled = false;
-        }
+        
       }
     });
   </script>
