--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <div id="root" class="container">
-      
+      <coupon @applied="onCouponApplied"></coupon>
+      <h2 v-if="couponApplied">You used a coupon!</h2>
     </div>
     <script src="https://unpkg.com/vue"></script>
   </body>
