--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
   </head>
   <body>
     <div id="root" class="container">
-      <modal>
-        <template slot="header">Header</template>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        <template slot="footer">
-          <a class="button is-primary">Save Changes</a>
-          <a class="button">Cancel</a>
-        </template>
-      </modal>
+      <progress-view inline-template>
+        <div>
+          <h2>Your progress through this course is {{ completionRate }}%</h2>
+          <button @click="completionRate += 10">Update Completion Rate</button>
+        </div>
+      </progress-view>
     </div>
     <script src="https://unpkg.com/vue"></script>
   </body>
